# langfuse-mcp

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  llms.txt  pyproject.toml
.claude/: settings.json
.claude/agents/: langfuse-analyst.md
langfuse_mcp/: __main__.py  client.py  config.py  server.py
langfuse_mcp/tools/: analytics.py  data_access.py
src/langfuse_analyst/: __init__.py  __main__.py  config.py  server.py
src/langfuse_analyst/tools/: __init__.py  analytics.py  data_access.py
